--- a/config.json
+++ b/config.json
@@ -4,5 +4,7 @@
 	"logFile":"tempread.log",
 	"availabilityFile":"/var/www/tempread_ws/availability.log",
 	"temperatureFile":"/var/www/tempread_ws/temperature.log",
+	"tagFile":"/var/www/tempread_ws/tag.log",
+	"maxTAGRecords":"30",
 	"thresholdTemp":"28"
 }
